FRI-267 Used fixed size thread pool when loading RF2 files